Support _UpdateTrackers creation during slicing